tests/data/placebo/test_security_group_reference_egress_filter/ec2.DescribeSecurityGroups_2.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "Description": "Test SG tagged with SampleTagKey=SampleTagValue",
                "GroupName": "test-referenced-sg",
                "IpPermissions": [
                    {
                        "FromPort": 60000,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 62000,
                        "UserIdGroupPairs": []
                    }
                ],
                "OwnerId": "123456789123",
                "GroupId": "sg-0f9585dc91c9c9655",
                "IpPermissionsEgress": [
                    {
                        "FromPort": 443,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 443,
                        "UserIdGroupPairs": []
                    }
                ],
                "Tags": [
                    {
                        "Key": "SampleTagKey",
                        "Value": "SampleTagValue"
                    }
                ],
                "VpcId": "vpc-94d1d1ee"
            }
        ],
        "ResponseMetadata": {}
    }
}
